# Ray_Trace-Rust

./: Cargo.toml  README.md  build_file.yml  scheme.yml
info/attribs/: a380.txt  biplane.txt  full_shuttle_stack.txt  spaceship_r1.txt  voyager.txt
schemes/: a380.yml  atlantis_stack.yml  biplane.yml  discovery.yml  discovery_shuttle.yml  exposed.yml  james_webb.yml  mesh_test.yml  outside_spheres.yml  shuttle_stack.yml  spaceship_r1.yml  triangles.yml  voyager.yml  wada.yml  walled.yml
src/: lib.rs  main.rs  material.rs  ray.rs  render_target.rs  scene.rs  ui_util.rs
src/accel/: aabb.rs  kdtree.rs  mod.rs
src/builder/: inner.rs  mod.rs
src/builder/pr/: cam.rs  distant_cube_map.rs  free_triangle.rs  mesh_from_node.rs  mod.rs  model.rs
src/elements/: defns.rs  distant_cube_map.rs  mod.rs  sphere.rs  triangle.rs
src/elements/mesh/: mesh.rs  mod.rs  triangle.rs
src/elements/triangle/: free.rs  general.rs  generic.rs  mod.rs
src/material/: dyn_diff_spec.rs  interaction.rs  mod.rs  uniform_diff_spec.rs  uv_image.rs
src/ray/: closest_hit.rs  generate.rs  hit.rs  mod.rs
src/render/: draw_scene.rs  mod.rs  radiance.rs  render_target.rs  test_rig.rs
src/scene/: basic_shape.rs  mod.rs  radiance.rs  render_tools.rs  test_rig.rs
