[package]
name = "ray_trace_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.33.0"
rayon = "1.10.0"
egui = "0.27.0"
eframe = { version = "0.27.0", features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "default",
] }
env_logger = { version = "0.10", default-features = false, features = [
  "auto-color",
  "humantime",
] }
image = {version = "0.25.1", features = ["jpeg", "png", "gif"] }
egui_extras = { version = "0.27.0", features = ["default", "all_loaders"] }